Trying to make changes, so confused.

--- a/Style Guide/index.html
+++ b/Style Guide/index.html
@@ -14,6 +14,8 @@
 <body>
     <div class="banner">
         <h1>Michael's Style Guide</h1>
+        <h2>Use for web pages
+        </h2>
       </div>    
         <nav class="navbar">
             <ul>
