--- a/bootstrap.html
+++ b/bootstrap.html
@@ -25,7 +25,10 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link disabled">Menu</a>
+              </li>
+              li class="nav-item">
+                <a class="nav-link disabled">Features</a>
               </li>
             </ul>
           </div>
